# causaltemp-xai

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
causaltemp_xai/: __init__.py
causaltemp_xai/benchmark/: __init__.py  generator.py
causaltemp_xai/classifiers/: __init__.py  tcn.py
causaltemp_xai/methods/: __init__.py  carla.py  dice.py  wachter.py
causaltemp_xai/metrics/: __init__.py  axis_c.py  cf_faith.py
experiments/: run_all.py
notebooks/: 01_data_exploration.ipynb
tests/: test_cf_faith.py  test_generator.py
