[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "causaltemp-xai"
version = "0.1.0"
description = "Causal counterfactual explanations for temporal data"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "causaltemp-xai contributors" }]
keywords = ["explainability", "counterfactual", "time-series", "causal", "xai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "torch>=2.0",
    "scikit-learn>=1.3",
    "networkx>=3.0",
    "pandas>=2.0",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["causaltemp_xai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["causaltemp_xai"]
omit = ["tests/*", "experiments/*"]
